2008-12-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/text/SimpleDateFormat.java:
	Remove superfluous empty line introduced
	in last commit.
	
2008-12-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/text/MessageFormat.java:
	Convert variables to use generic types, use
	CPStringBuilder in place of StringBuilder.
	(Field()): Suppress warning due to only being used by
	deserialization.
	(scanFormat(String,int,CPStringBuilder,List,Locale)):
	Use ArrayList instead of Vector as no synchronisation needed.
	(parse(String,ParsePosition)): Likewise.
	* java/text/NumberFormat.java:
	(Field()): Suppress warning due to only being used by
	deserialization.
	* java/text/RuleBasedCollator.java:
	Convert variables to use generic types.
	(CollationElement): Make fields final.
	(CollationSorter): Likewise.
	(CollationSorter(int,String,int,boolean)): New constructor.
	* java/text/SimpleDateFormat.java,
	Convert variables to use generic types.
	(applyPattern(String)): Clear list rather than creating a new instance.
	
2008-12-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/text/SimpleDateFormat.java:
	(standardChars): Use standard characters from CLDR.
	(RFC822_TIMEZONE_FIELD): Fixed to match new standard
	characters.
	
2008-12-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/String.java:
	(byte[],int,int,String): Call new Charset method.
	(stringToCharset(String)): Private method added to
	handle exception conversion.
	(byte[],int,int,Charset): Implemented.
	(byte[], Charset): Likewise.
	(getBytes(String)): Call new Charset method.
	(getBytes(Charset)): Implemented.
	
2008-12-18  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_FreetypeGlyphVector.c:
	Include '\0' in the string.
	
2008-12-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/38473:
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_FreetypeGlyphVector.c: