@@ -1,5 +1,11 @@
 2008-12-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* java/text/MessageFormat.java:
+	(parse(String,ParsePosition)): Emulate behaviour
+	of Vector's setSize() which was being implicitly relied on.
+
+2008-12-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* java/text/SimpleDateFormat.java:
 	Remove superfluous empty line introduced
 	in last commit.
